unpackaged/main/default/objects/Service_Contract__c/Service_Contract__c.object-meta.xml
<CustomObject>
    <label>Service Contract</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>