unpackaged/main/default/objects/Service_Contract__c/fields/Contract_Indexation_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Indexation_Date__c</fullName>
    <label>Contract Indexation Date</label>
    <type>Date</type>
</CustomField>