unpackaged/main/default/objects/Service_Contract__c/fields/Contract_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_months__c</fullName>
    <label>Contract Term (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>