unpackaged/main/default/objects/Service_Contract__c/fields/Customer_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Signed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>