unpackaged/main/default/objects/Service_Contract__c/fields/Exclusive_Contract__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusive Contract</label>
    <type>Checkbox</type>
</CustomField>