unpackaged/main/default/objects/Service_Contract__c/fields/G_P__c.field-meta.xml
<CustomField>
    <fullName>G_P__c</fullName>
    <label>GP %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>