unpackaged/main/default/objects/Service_Contract__c/fields/Percentage_of_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Purchase_Price__c</fullName>
    <label>Percentage of Purchase Price</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>