unpackaged/main/default/objects/Service_Contract__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TF</fullName>
            </value>
            <value>
                <fullName>DCC</fullName>
            </value>
            <value>
                <fullName>TF &amp; DCC</fullName>
            </value>
            <value>
                <fullName>Planet MS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>