unpackaged/main/default/objects/Service_Contract__c/fields/PTF_Fixed_Fee__c.field-meta.xml
<CustomField>
    <fullName>PTF_Fixed_Fee__c</fullName>
    <label>PTF Fixed Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>