unpackaged/main/default/objects/Service_Contract__c/fields/PTF_Percentage_of_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>PTF_Percentage_of_Purchase_Price__c</fullName>
    <label>PTF Percentage of Purchase Price</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>