unpackaged/main/default/objects/Service_Contract__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track</label>
    <type>Checkbox</type>
</CustomField>