unpackaged/main/default/objects/Service_Contract__c/recordTypes/Partner_Contract.recordType-meta.xml
<RecordType>
    <fullName>Partner_Contract</fullName>
    <active>true</active>
    <label>Partner Contract</label>
</RecordType>