unpackaged/main/default/objects/Service_Contract__c/validationRules/DCC_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>DCC_Contract</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Product__c) = &quot;DCC&quot; , TEXT(G_P__c) = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>G_P__c</errorDisplayField>
    <errorMessage>You must complete the GP % for DCC contracts.</errorMessage>
</ValidationRule>