unpackaged/main/default/objects/Service_Contract__c/validationRules/TF_and_DCC_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>TF_and_DCC_Contract</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Product__c) = &quot;TF &amp; DCC&quot; , OR(TEXT(Rebate__c) = &quot;&quot;, TEXT(G_P__c) = &quot;&quot;))</errorConditionFormula>
    <errorMessage>You must complete the Rebate % and GP % fields for TF &amp; DCC contracts.</errorMessage>
</ValidationRule>