unpackaged/main/default/objects/Service_Contract__c/validationRules/TF_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>TF_Contract</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Product__c) = &quot;TF&quot; , TEXT(Rebate__c) = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Rebate__c</errorDisplayField>
    <errorMessage>You must complete the Rebate % for TF contracts.</errorMessage>
</ValidationRule>