unpackaged/main/default/objects/Service_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Name__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Contract_Term_months__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Owner_Expiration_Notice__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>